--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "auto-post-playwright",
   "version": "1.0.0",
+  "description": "Stable Medium auto-post via Playwright using cookies",
+  "main": "main.js",
   "scripts": {
     "start": "node main.js"
   },
   "dependencies": {
-    "playwright": "^1.48.2"
+    "playwright": "^1.49.0",
+    "fs-extra": "^11.2.0"
   }
 }
