--- a/.github/workflows/run-automation.yml
+++ b/.github/workflows/run-automation.yml
@@ -6,21 +6,16 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+    env:
+      MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-    - name: Install dependencies
-      run: npm install
+      - run: npm install
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-
-    - name: Run automation
-      run: npm start
+      - run: npm start
