--- a/.github/workflows/run-automation.yml
+++ b/.github/workflows/run-automation.yml
@@ -1,33 +1,34 @@
 name: Run Medium Test Post
-
 on:
-  workflow_dispatch:    # manual trigger in Actions UI
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  schedule:
+    - cron: "0 */6 * * *" # optional — runs every 6 hours
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "18"
 
-      - name: Install dependencies
-        run: |
-          npm ci || npm install
+      - name: Install deps
+        run: npm ci
 
-      - name: Install Playwright browsers
-        run: |
-          npx playwright install --with-deps
-
-      - name: Run automation
+      - name: Run Medium automation
         env:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
+          MEDIUM_COOKIES_B64: ${{ secrets.MEDIUM_COOKIES_B64 }}
         run: |
-          node main.cjs
+          npm start
+
+      - name: Upload screenshot artifact (if any)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: medium-screenshot
+          path: medium-post-result.png
