--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "auto-post-playwright",
   "version": "1.0.0",
-  "type": "commonjs",
+  "description": "Medium test poster using Browserless + Playwright Core",
+  "main": "main.cjs",
   "scripts": {
     "start": "node main.cjs"
   },
   "dependencies": {
-    "playwright": "^1.49.1"
+    "playwright-core": "^1.49.1"
   }
 }
