--- a/.github/workflows/run-automation.yml
+++ b/.github/workflows/run-automation.yml
@@ -2,28 +2,25 @@ name: Run Medium Test Post
 
 on:
   workflow_dispatch:
-  # optional scheduled run; uncomment if you want daily tests
-  # schedule:
-  #   - cron: '0 9 * * *'
 
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: 18
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Run Medium test (Browserless)
+      - name: Run Automation
         env:
           BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-        run: |
-          npm start
+        run: npm start
