--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "auto-post-playwright",
   "version": "1.0.0",
   "type": "module",
-  "main": "main.cjs",
+  "main": "main.mjs",
   "scripts": {
-    "start": "node main.cjs"
+    "start": "node main.mjs"
   },
   "dependencies": {
     "playwright": "^1.46.0",
