--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -1,28 +1,29 @@
 name: Run Medium Test Post
-
 on:
   workflow_dispatch:
 
 jobs:
   run-medium-post:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci || npm install
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
 
       - name: Run Medium automation
         env:
           BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-        run: |
-          echo "=== Starting Medium automation ==="
-          npm start
+          USER_AGENT: 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119 Safari/537.36'
+          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }} # optional override for WebSocket URL
+        run: npm start
