--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node main.mjs"
   },
   "dependencies": {
-    "playwright": "^1.49.1"
+    "playwright": "^1.49.0",
+    "dotenv": "^16.0.0"
   }
 }
