--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -1,6 +1,7 @@
 name: Run Medium Test Post
+
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   run-medium-post:
@@ -9,21 +10,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci || npm install
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: npm install
 
       - name: Run Medium automation
         env:
           BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-          USER_AGENT: 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119 Safari/537.36'
-          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }} # optional override for WebSocket URL
+          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }} # optional: override with your ws url
         run: npm start
