--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node main.mjs"
   },
   "dependencies": {
-    "playwright": "^1.49.0",
-    "dotenv": "^16.0.0"
+    "playwright": "^1.45.0"
   }
 }
