--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -1,26 +1,32 @@
 name: Run Medium Test Post
-
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 jobs:
   run-medium-post:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "20"
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm ci || npm install
+          # Playwright browsers are not required for browserless CDP, but install helpers
+          npx playwright install --with-deps || true
 
       - name: Run Medium automation
         env:
+          # Add these secrets to your repository secrets
           BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
-          MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }} # optional: override with your ws url
-        run: npm start
+          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }}
+          MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}  # prefer base64-encoded JSON
+          USER_AGENT: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119 Safari/537.36"
+        run: |
+          echo "=== Starting Medium automation ==="
+          node main.mjs
