--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -6,23 +6,23 @@ on:
 jobs:
   run-medium-post:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Setup Node
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
 
-      - name: Run Medium automation
+      - name: Run Medium Auto Poster
+        run: node main.mjs
         env:
           BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
-          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }}
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-          USER_AGENT: ${{ secrets.USER_AGENT }}
-        run: |
-          echo "=== Starting Medium automation ==="
-          npm start
+          MEDIUM_FINGERPRINT: ${{ secrets.MEDIUM_FINGERPRINT }}
+          MEDIUM_POST_HTML: ${{ secrets.MEDIUM_POST_HTML }}
