--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -6,23 +6,41 @@ on:
 jobs:
   run-medium-post:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Use Node.js 20
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20"
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - name: Run Medium Auto Poster
-        run: node main.mjs
+      - name: Install dependencies (try ci, fallback to install)
+        run: |
+          set -e
+          if [ -f package-lock.json ]; then
+            echo "package-lock.json found -> using npm ci"
+            npm ci --no-audit --prefer-offline || ( echo "npm ci failed -> falling back to npm install" && npm install --no-audit --prefer-offline )
+          else
+            echo "No package-lock.json -> using npm install"
+            npm install --no-audit --prefer-offline
+          fi
+
+      - name: Run Medium automation
         env:
+          BROWSERLESS_WS: ${{ secrets.BROWSERLESS_WS }}
           BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
           MEDIUM_FINGERPRINT: ${{ secrets.MEDIUM_FINGERPRINT }}
-          MEDIUM_POST_HTML: ${{ secrets.MEDIUM_POST_HTML }}
+          USER_AGENT: ${{ secrets.USER_AGENT }}
+        run: |
+          echo "=== Starting Medium automation ==="
+          node main.mjs
