--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -1,51 +1,34 @@
-name: Run Medium Post
+name: Run Medium Post (manual)
 
 on:
   workflow_dispatch:
 
 jobs:
-  run-medium:
+  run-medium-post:
     runs-on: ubuntu-latest
-    env:
-      # optional: if you set USER_AGENT as repo secret, define it below
-      USER_AGENT: ${{ secrets.USER_AGENT || '' }}
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Create chrome-profile directory
+      - name: Download Medium Profile ZIP from Private Repo
         run: |
-          mkdir -p /tmp/chrome-profile
+          curl -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+            -L https://raw.githubusercontent.com/justingerad05/medium-profile-private/main/medium-profile.zip \
+            -o medium-profile.zip
 
-      - name: Decode CHROME_PROFILE_B64 and unzip
-        if: ${{ secrets.CHROME_PROFILE_B64 != '' }}
+      - name: Unzip Medium Profile
         run: |
-          echo "Decoding CHROME_PROFILE_B64 (this contains your profile ZIP base64)"
-          printf "%s" "${{ secrets.CHROME_PROFILE_B64 }}" > /tmp/profile.b64
-          base64 --decode /tmp/profile.b64 > /tmp/profile.zip || ( echo "base64 decode failed" && exit 1 )
-          # unzip into /tmp/chrome-profile
-          unzip -q /tmp/profile.zip -d /tmp/chrome-profile || ( echo "unzip failed" && exit 1 )
-          # If your zip contained the profile folder name directly, ensure final path to be used:
-          # the unzip may create /tmp/chrome-profile/Profile 1 or Default; we will handle in node script.
+          mkdir medium-profile
+          unzip -q medium-profile.zip -d medium-profile
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
-          npm ci --prefer-offline --no-audit || npm install --no-audit
+          npm install
+          npx playwright install chromium
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium
-
-      - name: Run automation
+      - name: Run Medium Poster
         env:
-          CHROME_PROFILE_DIR: /tmp/chrome-profile
-          # If you used a different secret name, set it here
-          MEDIUM_POST_HTML: ${{ secrets.MEDIUM_POST_HTML || '' }}
-          # USER_AGENT can be passed as secret if you set it
-          USER_AGENT: ${{ secrets.USER_AGENT || '' }}
-        run: |
-          node main.mjs
+          BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
+          USER_AGENT: ${{ secrets.USER_AGENT }}
+        run: node main.mjs
