--- a/.github/workflows/Medium.yml
+++ b/.github/workflows/Medium.yml
@@ -1,34 +1,35 @@
-name: Run Medium Post (manual)
-
+name: Medium Auto Post
 on:
   workflow_dispatch:
 
 jobs:
-  run-medium-post:
+  run-medium:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Download Medium Profile ZIP from Private Repo
-        run: |
-          curl -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            -L https://raw.githubusercontent.com/justingerad05/medium-profile-private/main/medium-profile.zip \
-            -o medium-profile.zip
+    - name: Download Chrome Profile ZIP
+      run: |
+        curl -L -H "Authorization: token $PRIVATE_REPO_TOKEN" \
+          "$PRIVATE_ZIP_URL" -o medium-profile.zip
 
-      - name: Unzip Medium Profile
-        run: |
-          mkdir medium-profile
-          unzip -q medium-profile.zip -d medium-profile
+    - name: Extract Chrome Profile
+      run: |
+        mkdir profile
+        unzip medium-profile.zip -d profile
 
-      - name: Install Dependencies
-        run: |
-          npm install
-          npx playwright install chromium
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-      - name: Run Medium Poster
-        env:
-          BROWSERLESS_API_KEY: ${{ secrets.BROWSERLESS_API_KEY }}
-          USER_AGENT: ${{ secrets.USER_AGENT }}
-        run: node main.mjs
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run automation
+      env:
+        MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
+        MEDIUM_FINGERPRINT: ${{ secrets.MEDIUM_FINGERPRINT }}
+        USER_AGENT: ${{ secrets.USER_AGENT }}
+        MEDIUM_POST_HTML: ${{ secrets.MEDIUM_POST_HTML }}
+      run: node main.mjs
