--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "medium-auto-post",
-  "version": "1.0.0",
+  "name": "medium-automation",
   "type": "module",
-  "scripts": {
-    "start": "node main.mjs"
-  },
   "dependencies": {
-    "playwright": "^1.45.0"
+    "playwright-core": "^1.42.1",
+    "fingerprint-injector": "^2.1.36"
   }
 }
