--- a/.github/workflows/test-download.yml
+++ b/.github/workflows/test-download.yml
@@ -1,4 +1,4 @@
-name: Test Private ZIP Download
+name: Secret Test
 
 on:
   workflow_dispatch:
@@ -6,29 +6,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Print ZIP URL and Token Length
+      - name: print if secret exists
         run: |
-          echo "PRIVATEURL = $PRIVATEURL"
-          echo "PRIVATE_REPO_TOKEN length = ${#PRIVATE_REPO_TOKEN}"
-
-      - name: Try downloading the ZIP
-        run: |
-          echo "Trying curl..."
-          curl -v -L \
-            -H "Accept: application/octet-stream" \
-            -H "Authorization: token $PRIVATE_REPO_TOKEN" \
-            "$PRIVATEURL" \
-            -o mediumprofile.zip
-
-      - name: Check file
-        run: |
-          echo "Downloaded files:"
-          ls -lh
-    env:
-      PRIVATE_ZIP_URL: ${{ secrets.PRIVATEURL }}
-      PRIVATE_REPO_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
-
-
-permissions: read-all
+          if [ -z "${{ secrets.PRIVATEURL }}" ]; then
+            echo "secret is NOT accessible"
+            exit 1
+          else
+            echo "secret is accessible"
+          fi
