--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -15,12 +15,12 @@ jobs:
         run: |
           echo "Downloading private profile..."
           curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            "${{ secrets.PRIVATE_ZIP_URL }}" -o profile
+            "${{ secrets.PRIVATE_ZIP_URL }}" -o profile.zip
 
       - name: Unzip private profile
         run: |
           mkdir profile
-          unzip -o profile -d profile
+          unzip -o profile.zip -d profile
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
