--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -17,10 +17,10 @@ jobs:
           curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
             "${{ secrets.PRIVATE_ZIP_URL }}" -o profile
 
-      - name: Unzip private profile
+      - name: Unzip private profile.zip
         run: |
           mkdir profile
-          unzip -o profile -d profile
+          unzip -o profile.zip -d profile
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
