--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -15,9 +15,9 @@ jobs:
         run: |
           echo "Downloading private profile..."
           curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            "${{ secrets.PRIVATE_ZIP_URL }}" -o profile
+            "${{ secrets.PRIVATE_ZIP_URL }}" -o profile.zip
 
-      - name: Unzip private profile.zip
+      - name: Unzip private profile
         run: |
           mkdir profile
           unzip -o profile.zip -d profile
