--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -11,17 +11,18 @@ jobs:
       - name: Checkout public repo
         uses: actions/checkout@v4
 
+      - name: Download private profile ZIP
+        run: |
+          echo "Downloading private profile..."
+          curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+            "${{ secrets.PRIVATE_ZIP_URL }}" -o profile.zip
+
       - name: Downloading private profile...
         run: |
-             echo "Downloading private profile..."
-             curl -L "$PROFILE_URL" -o medium-profile.zip
-             mkdir profile
-             unzip medium-profile.zip -d profile
-
-      - name: Unzip private profile
-        run: |
-          mkdir profile
-          unzip -o profile.zip -d profile
+           echo "Downloading private profile..."
+           curl -L "$PROFILE_URL" -o medium-profile.zip
+           mkdir profile
+           unzip medium-profile.zip -d profile
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
