--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -15,14 +15,12 @@ jobs:
         run: |
           echo "Downloading private profile..."
           curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            "${{ secrets.PRIVATE_ZIP_URL }}" -o profile.zip
+            "${{ secrets.PRIVATE_ZIP_URL }}" -o medium-profile.zip
 
-      - name: Downloading private profile...
+      - name: Unzip private profile
         run: |
-           echo "Downloading private profile..."
-           curl -L "$PROFILE_URL" -o medium-profile.zip
-           mkdir profile
-           unzip medium-profile.zip -d profile
+          mkdir profile
+          unzip -o medium-profile.zip -d profile
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
