--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -11,11 +11,21 @@ jobs:
       - name: Checkout public repo
         uses: actions/checkout@v4
 
-      - name: Download private profile ZIP
+      - name: Download private profile ZIP (GitHub Release Asset)
         run: |
-          echo "Downloading private profile..."
-          curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            "${{ secrets.PRIVATE_ZIP_URL }}" -o medium-profile.zip
+          echo "Downloading private profile from private repo release..."
+          
+          curl -L \
+            -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+            -H "Accept: application/octet-stream" \
+            "https://api.github.com/repos/justingerad05/mediumprofile/releases/assets/325611337" \
+            --output medium-profile.zip
+
+      - name: Verify downloaded file
+        run: |
+          echo "Downloaded file info:"
+          ls -lh medium-profile.zip
+          file medium-profile.zip
 
       - name: Unzip private profile
         run: |
