--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -21,12 +21,6 @@ jobs:
             "https://api.github.com/repos/justingerad05/mediumprofile/releases/assets/325611337" \
             --output medium-profile.zip
 
-      - name: Verify downloaded file
-        run: |
-          echo "Downloaded file info:"
-          ls -lh medium-profile.zip
-          file medium-profile.zip
-
       - name: Unzip private profile
         run: |
           mkdir profile
@@ -40,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Medium script
+      - name: Run Medium Test Post
         env:
           PROFILE_PATH: "./profile"
         run: node index.js
