--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Chromium for Playwright
+        run: npx playwright install chromium
+
       - name: Run Medium Test Post
         env:
           PROFILE_PATH: "./profile"
