--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -19,20 +19,20 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Playwright browsers
+      - name: Install Playwright Chromium
         run: npx playwright install chromium
 
-      - name: Prepare Medium cookies
+      - name: Unzip Medium profile
         run: |
-          mkdir -p .
-          echo "${{ secrets.MEDIUM_COOKIES }}" > mediumState.json
+          mkdir -p profile
+          unzip profile/medium-profile.zip -d profile
 
-      - name: Run Medium Test Post
+      - name: Run script
         run: node index.js
 
       - name: Upload debug artifacts
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-debug
           path: debug/
