--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -4,64 +4,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  run:
+  post:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2️⃣ Cache Node modules
-      - name: Cache Node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-${{ hashFiles('package.json') }}
-          restore-keys: |
-            node-modules-
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
 
-      # 3️⃣ Cache Playwright browsers
-      - name: Cache Playwright browsers
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('package.json') }}
-          restore-keys: |
-            playwright-browsers-${{ runner.os }}-
+      - name: Create profile folder
+        run: mkdir -p profile
 
-      # 4️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      # 5️⃣ Install dependencies
-      - name: Install dependencies
-        run: npm install
-
-      # 6️⃣ Download private Medium profile ZIP
-      - name: Download private profile
+      - name: Download Medium profile ZIP
         run: |
-          echo "Downloading private profile..."
-          curl -L \
-            -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            -H "Accept: application/octet-stream" \
-            "https://api.github.com/repos/justingerad05/mediumprofile/releases/assets/325795996" \
-            --output medium-profile.zip
+          echo "Downloading profile..."
+          curl -L -o profile.zip \
+            https://raw.githubusercontent.com/justingerad05/auto-post-playwright/main/medium-profile.zip
 
-      # 7️⃣ Unzip profile
-      - name: Unzip private profile
+      - name: Extract Medium profile
         run: |
-          mkdir -p profile
-          unzip -o medium-profile.zip -d profile
+          unzip profile.zip -d profile
+          ls -R profile
 
-      # 8️⃣ Install Playwright Chromium
-      - name: Install Playwright Chromium
-        run: npx playwright install chromium
-
-      # 9️⃣ Run Medium test post
-      - name: Run Medium Test Post
+      - name: Run Medium poster
         env:
           PROFILE_PATH: ./profile
         run: |
@@ -84,8 +51,8 @@ jobs:
             exit 1
           }
 
-      - name: Upload Screenshot Artifact
+      - name: Upload debug screenshots
         uses: actions/upload-artifact@v4
         with:
-          name: medium-error-screenshot
+          name: debug-screenshots
           path: screenshots
